--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -35,6 +35,7 @@
 
   --font-sans: var(--font-inter);
   --font-display: var(--font-lexend);
+  --font-sentient: 'Sentient', serif;
 
   --container-2xl: 40rem;
 }
